--- a/index.html
+++ b/index.html
@@ -465,12 +465,7 @@
                     </div>
                     <div class="footer-widget-about-description">
                         <p>Investors platform is a modern community that comprises of inventors and investors where creativity and innovation meets actualization, thereby benefiting both party, its society and the world at large.</p>
-                        <div class="socials mt-4">
-                        <i class="material-icons">facebook</i>
-                        <i class="material-icons">twitter</i>
-                        <i class="material-icons">instagram</i>
-                        <i class="material-icons">linkedin</i>
-                        </div>
+                        <p>&copy; Investors 2021. All Rights Reserved.</p>
                     </div>
                     </div>
                     <!--/ End Footer About -->
@@ -551,17 +546,36 @@
     });
   </script>
   <script>
-    $('.count').each(function () {
-        $(this).prop('Counter',0).animate({
-            Counter: $(this).text()
-        }, {
-            duration: 20000,
-            easing: 'swing',
-            step: function (now) {
-                $(this).text(Math.ceil(now));
-            }
-        });
+
+    $(window).scroll(testScroll);
+    var viewed = false;
+
+    function isScrolledIntoView(elem) {
+        var docViewTop = $(window).scrollTop();
+        var docViewBottom = docViewTop + $(window).height();
+
+        var elemTop = $(elem).offset().top;
+        var elemBottom = elemTop + $(elem).height();
+
+        return ((elemBottom <= docViewBottom) && (elemTop >= docViewTop));
+    }
+
+    function testScroll() {
+  if (isScrolledIntoView($(".stat-details")) && !viewed) {
+      viewed = true;
+      $('.count').each(function () {
+      $(this).prop('Counter',0).animate({
+          Counter: $(this).text()
+      }, {
+          duration: 10000,
+          easing: 'swing',
+          step: function (now) {
+            $(this).text(Math.ceil(now).toLocaleString('en'));
+          }
+      });
     });
-  </script>
+  }
+}
+ </script>
   </body>
 </html>
