--- a/all-invention.html
+++ b/all-invention.html
@@ -68,7 +68,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="side-header">
-                                <h4>Industry <span class="pull-right float-right"><small>see all <i class="fa fa-send"></i></small></span></h4>
+                                <h4>Industry <span class="pull-right float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></h4>
                             </div>
                             <div class="side-body">
                                 <ul class="ks-cboxtags">
@@ -82,7 +82,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="side-header">
-                                <h4>Tags <span class="pull-right float-right"><small>see all <i class="fa fa-send"></i></small></span></h4>
+                                <h4>Tags <span class="pull-right float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></h4>
                             </div>
                             <div class="side-body">
                                 <ul class="ks-cboxtags">
