--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-md-6 m-auto" >
                 <div class="login-form p-6">
-                    <h4>Sign in <span class="float-right pri-color"><a href=""><small>Register here</small></a></span></h4>
+                    <h4>Sign in <span class="float-right pri-color"><a href=""><small>Register here <i class="fa fa-chevron-right"></i></small></a></span></h4>
                     <form action="">
                         <div class="row">
                             <div class="col-md-12 mb-3">
