added font awesome link

--- a/login.html
+++ b/login.html
@@ -140,6 +140,7 @@
             </div>
         </div>
     </div>
+    <script src="https://use.fontawesome.com/a5104775bc.js"></script>
     <script src="assets/js/addons.js"></script>
 
 </body>
