--- a/inventor/post-invention.html
+++ b/inventor/post-invention.html
@@ -112,7 +112,7 @@
             
             <li class="nav-item nav-category"></li>
             <li class="nav-item ">
-              <a class="nav-link active" href="dashboard.html">
+              <a class="nav-link active" href="index.html">
                 <i class="material-icons">dashboard</i>
                 <span class="menu-title">
                     &nbsp;Dashboard
