--- a/investor/invested-inventions.html
+++ b/investor/invested-inventions.html
@@ -246,9 +246,9 @@
                               <td> May 15, 2015 </td>
                               <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                                 <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">Edit</a>
-                                    <a class="dropdown-item" href="invention-details.html">View</a>
-                                    <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                                  <a class="dropdown-item" href="../inventor/invention-details.html">View</a>
+                                  <a class="dropdown-item" href="">Invest</a>
+                                  <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                                 </div>
                               </td>
                             </tr>
@@ -267,9 +267,9 @@
                                 <td> May 15, 2015 </td>
                                 <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                                     <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item" href="invention-details.html">Edit</a>
-                                        <a class="dropdown-item" href="#">View</a>
-                                        <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                                      <a class="dropdown-item" href="../inventor/invention-details.html">View</a>
+                                      <a class="dropdown-item" href="">Invest</a>
+                                      <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                                     </div>
                                   </td>
                               </tr>
