added forgot password pages

--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
                                 <input type="password" class="form-control-lg" placeholder="password">
                             </div>
                             <div class="col-md-12">
-                                <a href="forgot-password.html" class="float-right">Forgot password?</a>
+                                <a href="reset-password.html" class="float-right">Forgot password?</a>
                             </div>
                             <div class="col-md-12 mt-4">
                                 <button class="btn btn-block pri-bg-color login-button br">Sign in</button>
