--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
+      <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   </head>
   <body>
 
@@ -86,7 +91,7 @@
         <div class="row text-center">
             <div class="col-md-6">
                 <div class="mr-auto">
-                    <img src="assets/images/thinking.svg" class="img-fluid" width="400" alt="">
+                    <img src="assets/images/thinking.svg" class="img-fluid animate__animated animate__bounce" width="400" alt="">
                 </div>
             </div>
             <div class="col-md-6" style="margin: auto;">
