added more admin pages

--- a/admin/all-users.html
+++ b/admin/all-users.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Unapproved Invention - Investors App - Admin Dashboard</title>
+    <title>Investors App - Admin Dashboard</title>
     <!-- plugins:css -->
     <!-- endinject -->
     <!-- plugin css for this page -->
@@ -210,73 +210,73 @@
                 <div class="col-md-12 grid-margin">
                 <div class="card">
                     <div class="card-body">
-                    <h4 class="card-title mb-4">Unapproved Inventions</h4>
+                    <h4 class="card-title mb-4">Total users</h4>
                     <table class="table table-hover table-responsive" style="width: 100%;">
                         <thead style="background-color: #F4F2FF;">
                         <tr>
-                            <th> S/N </th>
-                            <th> Invention Title </th>
-                            <th> Amount Required </th>
-                            <th> Amount Invested </th>
-                            <th>Status</th>
-                            <th> Published Date </th>
+                            <th> Image </th>
+                            <th> Name </th>
+                            <th> Usertype </th>
+                            <th> Email </th>
+                            <th> Phone </th>
+                            <th> Registered date </th>
                             <th> <i class="material-icons md-18">more_vert</i> </th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
                             <td class="py-1">
-                                1
+                            <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
                             </td>
-                            <td> Electric Car </td>
+                            <td> Kazeem Kayode </td>
                             <td>
-                            $ 450,000,000
+                            Investor
                             </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
+                            <td> kazeman@gmail.com </td>
+                            <td> 09078654382 </td>
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
+                                <a class="dropdown-item" href="#">Approve</a>
+                                <a class="dropdown-item" href="view-user.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
                             </td>
                         </tr>
                         <tr>
                             <td class="py-1">
-                                2
+                            <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
                             </td>
-                            <td> Electric Car </td>
+                            <td> Daniel Show </td>
                             <td>
-                                $ 450,000,000
+                            Inventor
                             </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                                <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
-                                </div>
-                                </td>
-                        </tr>
-                        <tr>
-                            <td class="py-1">
-                                1
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                            $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
+                            <td> danielshow@gmail.com </td>
+                            <td> 09078654382 </td>
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
+                                <a class="dropdown-item" href="#">Approve</a>
+                                <a class="dropdown-item" href="view-user.html">View</a>
+                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                            </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="py-1">
+                            <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
+                            </td>
+                            <td> Daniel Show </td>
+                            <td>
+                            Inventor
+                            </td>
+                            <td> danielshow@gmail.com </td>
+                            <td> 09078654382 </td>
+                            <td> May 15, 2015 </td>
+                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
+                            <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="#">Approve</a>
+                                <a class="dropdown-item" href="view-user.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
                             </td>
