--- a/admin/approved-inventions.html
+++ b/admin/approved-inventions.html
@@ -237,7 +237,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
+                                <a class="dropdown-item" href="approved-invention-detail.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
                             </td>
