--- a/admin/index.html
+++ b/admin/index.html
@@ -242,7 +242,7 @@
                           <p class="mb-0">Total users</p>
                         </div>
                         <h4 class="font-weight-semibold">7,590</h4>
-                        <a href="#" class="btn btn-secondary">View all</a>
+                        <a href="all-users.html" class="btn btn-secondary">View all</a>
                       </div>
                     </div>
                   </div>
@@ -255,8 +255,8 @@
                   <div class="col-md-6 grid-margin">
                     <div class="card">
                       <div class="card-body card-div-link">
-                        <h4 class="card-title mb-0">Unread messages<a href="#"><span class="float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></a></h4>
-                        <a href="#">
+                        <h4 class="card-title mb-0">Unread messages<a href="messages.html"><span class="float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></a></h4>
+                        <a href="message-details.html">
                           <div class="d-flex mt-3 py-2 border-bottom div-link">
                             <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
                             <div class="wrapper ml-2">
@@ -470,7 +470,7 @@
                   <div class="col-md-6 grid-margin">
                     <div class="card">
                       <div class="card-body">
-                        <h4 class="card-title mb-4">Total users<a href="#"><span class="float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></a></h4>
+                        <h4 class="card-title mb-4">Total users<a href="all-users.html"><span class="float-right"><small>see all <i class="fa fa-chevron-right"></i></small></span></a></h4>
                         <table class="table table-hover table-responsive" style="width: 100%;">
                           <thead style="background-color: #F4F2FF;">
                             <tr>
@@ -526,11 +526,11 @@
                               <td class="py-1">
                                 <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
                               </td>
-                              <td> Daniel Show </td>
+                              <td> Kazeem Kayode </td>
                               <td>
-                                Inventor
+                                Investor
                               </td>
-                              <td> danielshow@gmail.com </td>
+                              <td> kazeman@gmail.com </td>
                               <td> 09078654382 </td>
                               <td> May 15, 2015 </td>
                               <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
