--- a/admin/messages.html
+++ b/admin/messages.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Unapproved Invention - Investors App - Admin Dashboard</title>
+    <title>Messages - Investors App - Admin Dashboard</title>
     <!-- plugins:css -->
     <!-- endinject -->
     <!-- plugin css for this page -->
@@ -209,80 +209,45 @@
             <div class="row">
                 <div class="col-md-12 grid-margin">
                 <div class="card">
-                    <div class="card-body">
-                    <h4 class="card-title mb-4">Unapproved Inventions</h4>
-                    <table class="table table-hover table-responsive" style="width: 100%;">
-                        <thead style="background-color: #F4F2FF;">
-                        <tr>
-                            <th> S/N </th>
-                            <th> Invention Title </th>
-                            <th> Amount Required </th>
-                            <th> Amount Invested </th>
-                            <th>Status</th>
-                            <th> Published Date </th>
-                            <th> <i class="material-icons md-18">more_vert</i> </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td class="py-1">
-                                1
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                            $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                            <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
-                            </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="py-1">
-                                2
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                                $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                                <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
-                                </div>
-                                </td>
-                        </tr>
-                        <tr>
-                            <td class="py-1">
-                                1
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                            $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                            <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
-                            </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="card-body card-div-link">
+                    <h4 class="card-title mb-0">All messages</h4>
+                    <a href="message-details.html">
+                        <div class="d-flex mt-3 py-2 border-bottom div-link">
+                        <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
+                        <div class="wrapper ml-2">
+                            <p class="mb-n1 font-weight-semibold">Sam Dada</p>
+                            <small>I have been having issues with my profile page. I tried to publishing software like Aldus PageMaker including versions of Lorem Ipsum.</small>
+                            <small class="text-white badge badge-warning ml-auto">Unread</small>
+                        </div>
+                        <small class="text-muted ml-auto">1 Hours ago</small>
+                        </div>
+                    </a>
+                    <div class="d-flex py-2 border-bottom">
+                        <span class="img-sm rounded-circle bg-warning text-white text-avatar">TL</span>
+                        <div class="wrapper ml-2">
+                        <p class="mb-n1 font-weight-semibold">Titi Layo</p>
+                        <small>I have been having issues with my profile page. I tried to publishing software like Aldus PageMaker including versions of Lorem Ipsum.</small>
+                            <small class="text-white badge badge-warning ml-auto">Unread</small>
+                        </div>
+                        <small class="text-muted ml-auto">4 Hours ago</small>
+                    </div>
+                    <div class="d-flex py-2 border-bottom">
+                        <img class="img-sm rounded-circle" src="assets/images/face4.jpg" alt="profile image">
+                        <div class="wrapper ml-2">
+                        <p class="mb-n1 font-weight-semibold">Dele Giwa</p>
+                        <small>I have been having issues with my profile page. I tried to publishing software like Aldus PageMaker including versions of Lorem Ipsum.</small>
+                        </div>
+                        <small class="text-muted ml-auto">4 Hours ago</small>
+                    </div>
+                    <div class="d-flex pt-2">
+                        <span class="img-sm rounded-circle bg-success text-white text-avatar">CN</span>
+                        <div class="wrapper ml-2">
+                        <p class="mb-n1 font-weight-semibold">Christain Nwamba</p>
+                        <small>I have been having issues with my profile page. I tried to publishing software like Aldus PageMaker including versions of Lorem Ipsum.</small>
+                            <small class="text-white badge badge-warning ml-auto">Unread</small>
+                        </div>
+                        <small class="text-muted ml-auto">7 Hours ago</small>
+                    </div>
                     </div>
                 </div>
                 </div>
