--- a/admin/unapproved-interest-details.html
+++ b/admin/unapproved-interest-details.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Unapproved Invention - Investors App - Admin Dashboard</title>
+    <title>Message Details - Investors App - Admin Dashboard</title>
     <!-- plugins:css -->
     <!-- endinject -->
     <!-- plugin css for this page -->
@@ -207,84 +207,107 @@
             <!-- Page Title Header Starts-->
             <!-- Page Title Header Ends-->
             <div class="row">
-                <div class="col-md-12 grid-margin">
-                <div class="card">
-                    <div class="card-body">
-                    <h4 class="card-title mb-4">Unapproved Inventions</h4>
-                    <table class="table table-hover table-responsive" style="width: 100%;">
-                        <thead style="background-color: #F4F2FF;">
-                        <tr>
-                            <th> S/N </th>
-                            <th> Invention Title </th>
-                            <th> Amount Required </th>
-                            <th> Amount Invested </th>
-                            <th>Status</th>
-                            <th> Published Date </th>
-                            <th> <i class="material-icons md-18">more_vert</i> </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td class="py-1">
-                                1
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                            $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                            <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
-                            </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="py-1">
-                                2
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                                $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                                <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="unapproved-invention-detail.html">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                <div class="col-md-8 grid-margin">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Electric Car <span class="float-right btn btn-success">Approve interest</span></h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="d-flex border-bottom">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Invention (Idea shared)</p>
                                 </div>
-                                </td>
-                        </tr>
-                        <tr>
-                            <td class="py-1">
-                                1
-                            </td>
-                            <td> Electric Car </td>
-                            <td>
-                            $ 450,000,000
-                            </td>
-                            <td> $ 7,700.99 </td>
-                            <td> Pending </td>
-                            <td> May 15, 2015 </td>
-                            <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
-                            <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
-                                <a class="dropdown-item" href="#" style="color: green;">Approve</a>
-                                <a class="dropdown-item" href="#" style="color: red;">Delete</a>
+                                <p class="text-muted ml-auto">Electric car</p>
                             </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Launch date (or commencement date)</p>
+                                </div>
+                                <p class="text-muted ml-auto">12th August, 2021</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Current budget</p>
+                                </div>
+                                <p class="text-muted ml-auto">$40,000</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Full amount required to complete</p>
+                                </div>
+                                <p class="text-muted ml-auto">$500,000</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Interest per investment</p>
+                                </div>
+                                <p class="text-muted ml-auto">50%</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Invention duration to complete</p>
+                                </div>
+                                <p class="text-muted ml-auto">6 months</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Business strategy</p>
+                                </div>
+                                <p class="text-muted ml-auto">-----------------</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Business model</p>
+                                </div>
+                                <p class="text-muted ml-auto">-----------------</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Business expansion plans</p>
+                                </div>
+                                <p class="text-muted ml-auto">-----------------</p>
+                            </div>
+                            <div class="d-flex border-bottom mt-3">
+                                <div class="wrapper">
+                                  <p class="mb-n1 font-weight-semibold">Target audience</p>
+                                </div>
+                                <p class="text-muted ml-auto">-----------------</p>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
+                <div class="col-md-4 grid-margin">
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4>Uploaded files</h4>
+                        </div>
+                        <div class="card-body text-center">
+                            <p><img src="assets/images/face4.jpg" alt=""></p>
+                            <button class="btn btn-secondary" data-toggle="modal" data-target="#inventionImage">preview file</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Inventor detail</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+
+          <div class="modal fade" id="inventionImage">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div>
+                           <img src="assets/images/face4.jpg" alt="">
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
           </div>
