--- a/admin/approved-interest.html
+++ b/admin/approved-interest.html
@@ -237,7 +237,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
+                                <a class="dropdown-item" href="approved-interest.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
                             </td>
@@ -255,7 +255,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                                 <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">View</a>
+                                    <a class="dropdown-item" href="approved-interest.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                                 </div>
                                 </td>
@@ -273,7 +273,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
+                                <a class="dropdown-item" href="approved-interest.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
                             </td>
