--- a/admin/unapproved-interest.html
+++ b/admin/unapproved-interest.html
@@ -237,7 +237,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
+                                <a class="dropdown-item" href="unapproved-interest-details.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: green;">Approve</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
@@ -256,7 +256,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                                 <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item" href="#">View</a>
+                                    <a class="dropdown-item" href="unapproved-interest-details.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: green;">Approve</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                                 </div>
@@ -275,7 +275,7 @@
                             <td> May 15, 2015 </td>
                             <td> <i class="material-icons md-18 curs"  id="dropdownMenuButton"    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">more_vert</i> 
                             <div class="dropdown-menu dd" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">View</a>
+                                <a class="dropdown-item" href="unapproved-interest-details.html">View</a>
                                 <a class="dropdown-item" href="#" style="color: green;">Approve</a>
                                 <a class="dropdown-item" href="#" style="color: red;">Delete</a>
                             </div>
