quick fixes on admin

--- a/admin/all-interest.html
+++ b/admin/all-interest.html
@@ -5,16 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>All Interest - Investors App - Admin Dashboard</title>
-    <!-- plugins:css -->
-    <!-- endinject -->
-    <!-- plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="assets/vendors/iconfonts/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../assets/css/bootstrap.css">
+    
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <!-- endinject -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/admin.css">
     <!-- End Layout styles -->
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -148,10 +143,16 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="all-users.html">
+                  <i class="menu-icon typcn typcn-document-text"></i>
+                  <span class="menu-title">Users</span>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#invention" aria-expanded="false" aria-controls="ui-basic">
                   <i class="menu-icon typcn typcn-coffee"></i>
-                  <span class="menu-title">Inventions</span>
-                  <i class="menu-arrow"></i>
+                  <span class="menu-title">Inventions&nbsp;&nbsp;</span>
+                  <i class="fa fa-caret-down"></i>
                 </a>
                 <div class="collapse" id="invention">
                   <ul class="nav flex-column sub-menu">
@@ -170,8 +171,8 @@
               <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#interest" aria-expanded="false" aria-controls="ui-basic">
                   <i class="menu-icon typcn typcn-coffee"></i>
-                  <span class="menu-title">Interest</span>
-                  <i class="menu-arrow"></i>
+                  <span class="menu-title">Interest&nbsp;&nbsp;</span>
+                  <i class="fa fa-caret-down"></i>
                 </a>
                 <div class="collapse" id="interest">
                   <ul class="nav flex-column sub-menu">
@@ -191,6 +192,12 @@
                 <a class="nav-link" href="industry-management.html">
                   <i class="menu-icon typcn typcn-document-text"></i>
                   <span class="menu-title">Industry Management</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="messages.html">
+                  <i class="menu-icon typcn typcn-document-text"></i>
+                  <span class="menu-title">Email messages</span>
                 </a>
               </li>
               <li class="nav-item">
